--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,20 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.gketdev.meitasks.ui.home.HomeFragment">
+        <action
+            android:id="@+id/action_homeFragment_to_taskDialogFragment"
+            app:destination="@id/taskDialog" />
     </fragment>
+
+    <dialog
+        android:id="@+id/taskDialog"
+        android:name="com.gketdev.meitasks.ui.taskdialog.TaskDialogFragment">
+
+        <argument
+            android:name="selectedTask"
+            app:argType="com.gketdev.meitasks.data.TaskEntity" />
+
+    </dialog>
 
 
 </navigation>
